# ai-agent

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  STRUCTURE.md  api.md  docker-compose.yml  pyproject.toml  run_server.py  start_server.sh  structure-adk.md
agents/: __init__.py  agent.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: chat.py
app/core/: config.py
app/schemas/: chat.py  ui.py
app/services/: __init__.py  suggestion.py  ui_parser.py
configs/: agent_config.yaml  mcp_config.yaml
nb/: Deepseek_OCR_(3B)-Eval.ipynb
scripts/: test_api.py
tools/: __init__.py  schemas.py  vnstock_mcp.py
utils/: __init__.py
